--- a/index.html
+++ b/index.html
@@ -749,6 +749,285 @@
       </div>
     </section>
 
+    <section class="bg-gray-50 py-10">
+      <div class="max-w-6xl mx-auto px-4">
+        <!-- Title -->
+        <h2 class="text-3xl font-bold text-gray-800">Why BD Safa Services</h2>
+        <p class="text-gray-600 mt-2 max-w-2xl">
+          We provide trusted and professional home services across Bangladesh,
+          ensuring convenience, quality, and customer satisfaction.
+        </p>
+
+        <!-- Carousel -->
+        <div class="mt-8 overflow-x-auto hide-scrollbar">
+          <div class="flex space-x-6">
+            <!-- Card 1 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/6099/6099922.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                Everything your home needs
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                All essential home services in one place — quick, simple, and
+                reliable.
+              </p>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/456/456212.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                Verified Professionals
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                All workers are trained, vetted, and background-checked.
+              </p>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/992/992651.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                Best Price Guarantee
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Transparent and affordable pricing without hidden charges.
+              </p>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/834/834520.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                Easy Online Booking
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Book your required service anytime in just a few taps.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hide scrollbar on mobile -->
+    <style>
+      .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+      .hide-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+    </style>
+
+    <section class="bg-white py-10">
+      <div class="max-w-6xl mx-auto px-4">
+        <!-- Title -->
+        <h2 class="text-3xl font-bold text-gray-800">How It Works</h2>
+        <p class="text-gray-600 mt-2 max-w-2xl">
+          Booking your home service is simple and fast. Follow these easy steps.
+        </p>
+
+        <!-- Carousel -->
+        <div class="mt-8 overflow-x-auto hide-scrollbar">
+          <div class="flex space-x-6">
+            <!-- Step 1 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/709/709790.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                1. Choose a Service
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Select from cleaning, electrical, plumbing, AC servicing, and
+                more.
+              </p>
+            </div>
+
+            <!-- Step 2 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/1828/1828930.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                2. Book Instantly
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Pick your preferred time slot and confirm your booking
+                instantly.
+              </p>
+            </div>
+
+            <!-- Step 3 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/942/942748.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                3. Get Professional Service
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Our trained and verified experts arrive on time and get the job
+                done.
+              </p>
+            </div>
+
+            <!-- Step 4 -->
+            <div class="min-w-[260px] bg-white rounded-3xl shadow p-6">
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/456/456115.png"
+                class="w-10 h-10 mb-4"
+              />
+              <h3 class="text-lg font-semibold text-gray-800">
+                4. Pay Securely
+              </h3>
+              <p class="text-sm text-gray-600 mt-2">
+                Make payments easily with secure and transparent pricing.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Hide scrollbar -->
+    <style>
+      .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+      .hide-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+    </style>
+    <section class="bg-gray-50 py-10">
+      <div class="max-w-6xl mx-auto px-4">
+        <!-- Title -->
+        <h2 class="text-3xl font-bold text-gray-800">Customer Reviews</h2>
+        <p class="text-gray-600 mt-2 max-w-2xl">
+          Thousands of customers trust BD Safa Services for reliable and
+          professional home services.
+        </p>
+
+        <!-- Carousel -->
+        <div class="mt-8 overflow-x-auto hide-scrollbar">
+          <div class="flex space-x-6">
+            <!-- Review 1 -->
+            <div class="min-w-[300px] bg-white rounded-3xl shadow p-6">
+              <div class="flex items-center space-x-3 mb-4">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/2922/2922510.png"
+                  class="w-10 h-10 rounded-full"
+                />
+                <div>
+                  <h3 class="font-semibold text-gray-800">Rahim Uddin</h3>
+                  <p class="text-xs text-gray-500">Home Cleaning</p>
+                </div>
+              </div>
+
+              <!-- Stars -->
+              <div class="flex text-yellow-400 mb-3">★★★★☆</div>
+
+              <p class="text-sm text-gray-600">
+                “Excellent service! The cleaners were professional and thorough.
+                Highly recommended.”
+              </p>
+            </div>
+
+            <!-- Review 2 -->
+            <div class="min-w-[300px] bg-white rounded-3xl shadow p-6">
+              <div class="flex items-center space-x-3 mb-4">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png"
+                  class="w-10 h-10 rounded-full"
+                />
+                <div>
+                  <h3 class="font-semibold text-gray-800">Sara Ahmed</h3>
+                  <p class="text-xs text-gray-500">AC Service</p>
+                </div>
+              </div>
+
+              <div class="flex text-yellow-400 mb-3">★★★★★</div>
+
+              <p class="text-sm text-gray-600">
+                “Quick response and great work! My AC is cooling better than
+                ever.”
+              </p>
+            </div>
+
+            <!-- Review 3 -->
+            <div class="min-w-[300px] bg-white rounded-3xl shadow p-6">
+              <div class="flex items-center space-x-3 mb-4">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/2922/2922688.png"
+                  class="w-10 h-10 rounded-full"
+                />
+                <div>
+                  <h3 class="font-semibold text-gray-800">Mahmud Hasan</h3>
+                  <p class="text-xs text-gray-500">Electrician Service</p>
+                </div>
+              </div>
+
+              <div class="flex text-yellow-400 mb-3">★★★★★</div>
+
+              <p class="text-sm text-gray-600">
+                “Professional electrician. Fixed my wiring issue within 30
+                minutes. Very satisfied!”
+              </p>
+            </div>
+
+            <!-- Review 4 -->
+            <div class="min-w-[300px] bg-white rounded-3xl shadow p-6">
+              <div class="flex items-center space-x-3 mb-4">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/2922/2922538.png"
+                  class="w-10 h-10 rounded-full"
+                />
+                <div>
+                  <h3 class="font-semibold text-gray-800">Nusrat Jahan</h3>
+                  <p class="text-xs text-gray-500">Sofa Cleaning</p>
+                </div>
+              </div>
+
+              <div class="flex text-yellow-400 mb-3">★★★★☆</div>
+
+              <p class="text-sm text-gray-600">
+                “Great sofa cleaning service. The team was polite and on time.
+                Will book again.”
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <style>
+      .hide-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+      .hide-scrollbar {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+    </style>
+
     <!-- Footer -->
     <footer class="bg-gray-900 text-white pt-10">
       <div class="max-w-6xl mx-auto px-4 md:px-8">
